--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Fascinate&display=swap');
+
 html,
+
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: 'Bebas Neue', cursive;
+font-family: 'Fascinate', cursive;
 }
 
 a {
@@ -14,3 +17,6 @@ a {
 * {
   box-sizing: border-box;
 }
+
+
+
