--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,12 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Fascinate&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fascinate&family=Source+Sans+Pro:wght@200;300;600;700&display=swap');
 
 html,
 
 body {
   padding: 0;
   margin: 0;
-  font-family: 'Bebas Neue', cursive;
-font-family: 'Fascinate', cursive;
+  font-family: 'Source Sans Pro', sans-serif;
 }
 
 a {
